# Cursor_intensive

./: .gitignore  Dockerfile  INSTALL.md  Makefile  README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
config/: prompts.yaml  settings.yaml
doc/: product_idea.md  tasklist.md  vision.md
src/: __init__.py  bot.py  config.py  conversation_memory.py  handlers.py  llm_client.py  logger.py
tests/: __init__.py  test_basic.py  test_config.py
