[project]
name = "llm-consultant"
version = "0.1.0"
description = "LLM-ассистент для первичной консультации клиентов"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4.0",
    "openai>=1.12.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"